--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "Remotely update SSL certificate for multiple nodes",
   "main": "build/index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "build": "node_modules/babel-cli/bin/babel.js src --out-dir build",
+    "start": "npm run build && node build/index.js"
   },
   "repository": {
     "type": "git",
@@ -20,10 +21,10 @@
     "babel-plugin-syntax-async-functions": "^6.5.0",
     "babel-plugin-transform-regenerator": "^6.6.5",
     "babel-polyfill": "^6.7.4",
-    "babel-preset-es2015": "^6.6.0",
-    "nexe": "^1.1.0"
+    "babel-preset-es2015": "^6.6.0"
   },
   "dependencies": {
+    "chalk": "^1.1.3",
     "cheerio": "^0.20.0",
     "node-bmc-hapi": "^0.1.0",
     "request": "^2.69.0"
