--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "babel-preset-es2015": "^6.6.0"
   },
   "dependencies": {
+    "blessed": "^0.1.81",
     "chalk": "^1.1.3",
     "cheerio": "^0.20.0",
     "node-bmc-hapi": "^0.1.0",
