--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "chalk": "^1.1.3",
     "cheerio": "^0.20.0",
     "node-bmc-hapi": "^0.1.0",
-    "request": "^2.69.0"
+    "request": "^2.69.0",
+    "yargs": "^4.3.2"
   }
 }
