--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "build/index.js",
   "scripts": {
     "build": "node_modules/babel-cli/bin/babel.js src --out-dir build",
-    "start": "npm run build && node build/index.js"
+    "start": "npm run build && node build/index.js",
+    "pack": "npm run build && nexe -i build/index.js -o bin/sslTool -r 5.7.0"
   },
   "repository": {
     "type": "git",
@@ -28,7 +29,9 @@
     "chalk": "^1.1.3",
     "cheerio": "^0.20.0",
     "node-bmc-hapi": "^0.1.0",
+    "pty.js": "^0.3.0",
     "request": "^2.69.0",
+    "term.js": "0.0.7",
     "yargs": "^4.3.2"
   }
 }
