--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "build": "node_modules/babel-cli/bin/babel.js src --out-dir build",
     "start": "npm run build && node build/index.js",
+    "lint": "node_modules/eslint/bin/eslint.js src",
     "pack": "npm run build && nexe -i build/index.js -o bin/sslTool -r 5.7.0"
   },
   "repository": {
@@ -19,10 +20,14 @@
   },
   "devDependencies": {
     "babel-cli": "^6.6.5",
+    "babel-eslint": "^6.0.2",
     "babel-plugin-syntax-async-functions": "^6.5.0",
     "babel-plugin-transform-regenerator": "^6.6.5",
     "babel-polyfill": "^6.7.4",
-    "babel-preset-es2015": "^6.6.0"
+    "babel-preset-es2015": "^6.6.0",
+    "eslint": "^2.7.0",
+    "eslint-config-airbnb": "^6.2.0",
+    "eslint-plugin-react": "^4.2.3"
   },
   "dependencies": {
     "blessed": "^0.1.81",
